@@ -26,6 +26,7 @@
     <File name="./Abakos.Compiler/Functions.cs" subtype="Code" buildaction="Compile" />
     <File name="./Abakos.Compiler/Values.cs" subtype="Code" buildaction="Compile" />
     <File name="./Abakos.Compiler/Operations.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Abakos.Compiler/UnkownVariableException.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
